<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoQuiz</string>

    <!--<string name="hello_world">Hello world!</string> -->
    //<string name="question_text">TKH was here!?!?</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean. </string>
    <string name="question_mideast">The Suez canal connects the Red Sea and the Indian Ocean. </string>
    <string name="question_africa">The source of the Nile River is in Egypt. </string>
    <string name="question_americas">The amazon river is the longest river in the Americas. </string>
    <string name="question_asia">Lake Baikal is the world \'s oldest and deepest freshwater lake.  </string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgement_toast">Cheating is wrong.</string>
</resources>
